<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:background="@drawable/register_bg"
    tools:context="com.example.user.signinsignup.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/login_email"
        android:inputType="textPersonName"/>

    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/password_hint"
        android:inputType="textPassword"

        android:layout_below="@id/email"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:indeterminateTint="@android:color/black"
            android:indeterminateDrawable="@drawable/login_btn_bg"


            />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_bg"
            android:text="@string/login_here"
            android:textAllCaps="false"
            android:fontFamily="casual"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#9575cd"
            android:elevation="150dp"
            android:layout_marginTop="50dp"
            />


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/welcome_img"/>

    </LinearLayout>


</RelativeLayout>
